Fixing GitHub Pages case-sensitiveness...

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <li><a href="./classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
         <li><a href="./classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
         <li><a href="./classes/$namespace.html#namespace-global" target="_self">$global namespace</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-define" target="_self">Define a class how-to</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-constructors" target="_self">Class constructors</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-properties" target="_self">Class properties</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-methods" target="_self">Class methods</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-events" target="_self">Custom events how-to</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-instances" target="_self">Creating class instances how-to</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
-        <li><a href="./classes/define%20classes%20with%20joopl.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-methods" target="_self">Class methods</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-events" target="_self">Custom events how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-instances" target="_self">Creating class instances how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
         <li><a href="./classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a></li>
         <li><a href="./classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a></li>
         <li><a href="./classes/Exception%20throwing%20best%20practices.html" target="_self">Throwing exceptions best practice</a></li>
