--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div id="api-list">
     <h2 class="off-left">> Object-oriented programming</h2>
     <ol id="oop-hints">
-        <li><a href="./classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
-        <li><a href="./classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="./classes/$namespace.html#namespace-global" target="_self">$global namespace</a></li>
+        <li><a href="./classes/joopl.$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
+        <li><a href="./classes/joopl.$namespace.html#method_using" target="_self">Importing namespaces</a></li>
+        <li><a href="./classes/joopl.$namespace.html#namespace-global" target="_self">$global namespace</a></li>
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a></li>
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a></li>
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a></li>
@@ -50,6 +50,7 @@
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-instances" target="_self">Creating class instances how-to</a></li>
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
         <li><a href="./classes/Define%20classes%20with%20jOOPL.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
+        <li><a href="./classes/Define%20classes%20with%20jOOPL.html#type-metadata" target="_self">Type metadata</a></li>
         <li><a href="./classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a></li>
         <li><a href="./classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a></li>
         <li><a href="./classes/Exception%20throwing%20best%20practices.html" target="_self">Throwing exceptions best practice</a></li>
@@ -64,14 +65,14 @@
 
     <h2 class="off-left">> API reference</h2>
     <ol id="class-list"> 
-        <li><a href="./classes/joopl.object.html" target="_self"><strong>joopl.Object</strong></a></li>
-        <li><a href="./classes/joopl.attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
-        <li><a href="./classes/joopl.enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
-        <li><a href="./classes/joopl.enumvalue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
-        <li><a href="./classes/joopl.type.html" target="_self"><strong>joopl.Type</strong></a></li>
-        <li><a href="./classes/joopl.exception.html" target="_self"><strong>joopl.Exception</strong></a></li>
-        <li><a href="./classes/joopl.argumentexception.html" target="_self"><strong>joopl.ArgumentException</strong></a></li>
-        <li><a href="./classes/joopl.notimplementedexception.html" target="_self"><strong>joopl.NotImplementedException</strong></a></li>
+        <li><a href="./classes/joopl.Object.html" target="_self"><strong>joopl.Object</strong></a></li>
+        <li><a href="./classes/joopl.Attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
+        <li><a href="./classes/joopl.Enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
+        <li><a href="./classes/joopl.EnumValue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
+        <li><a href="./classes/joopl.Type.html" target="_self"><strong>joopl.Type</strong></a></li>
+        <li><a href="./classes/joopl.Exception.html" target="_self"><strong>joopl.Exception</strong></a></li>
+        <li><a href="./classes/joopl.ArgumentException.html" target="_self"><strong>joopl.ArgumentException</strong></a></li>
+        <li><a href="./classes/joopl.NotImplementedException.html" target="_self"><strong>joopl.NotImplementedException</strong></a></li>
     </ol>
 
     <h2 class="off-left">> Quick links</h2>
