--- a/test/class.test.html
+++ b/test/class.test.html
@@ -35,8 +35,9 @@
 
                     ok(this.A.type.hasAttribute(this.TestAttr), "The test class must contain the attribute");
                     ok(this.A.type.getAttribute(this.TestAttr).testData == "hello world");
-                });
 
+                    throw new $global.joopl.NotImplementedException({ memberName: "a" });
+                });
             });
 
             test("Define a new class with attributes. Adding instances that are not Attribute must fail", function () {
