Small fixes on joopl.Exception documentation...

--- a/files/joopl.js.html
+++ b/files/joopl.js.html
@@ -1696,7 +1696,7 @@ var $manifest = null;
                 },
 
                 /**
-                    Gets an inner exception (optional) which provides for information about the sorrounding one
+                    Gets an inner exception (optional) which provides information about the sorrounding one
 
                     @property innerException
                     @type Exception
@@ -1720,8 +1720,8 @@ var $manifest = null;
                 /**
                     Gets underlying &#x60;Error&#x60; instance  
 
-                    @property stackTrace
-                    @type Array
+                    @property error
+                    @type Error
                     @readonly
                 */
                 get error() {
