--- a/classes/Exception handling best practices.html
+++ b/classes/Exception handling best practices.html
@@ -164,8 +164,8 @@
       <a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a>
     </li>
     <li>
-      <a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_blank">
-        <strong>Download minified jOOPL 2.4.0 (CDN)</strong>
+      <a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_blank">
+        <strong>jOOPL 2.4.1 (CDN)</strong>
       </a>
     </li>
     <li>
