--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       <a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a>
     </li>
     <li>
-      <a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_blank">
-        <strong>Download minified jOOPL 2.4.0 (CDN)</strong>
+      <a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_blank">
+        <strong>jOOPL 2.4.1 (CDN)</strong>
       </a>
     </li>
     <li>
@@ -267,7 +267,7 @@
 
             <h3>Useful links</h3>
             <ol id="main-links">
-                <li id="joopl-minified"><a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_self">jOOPL 2.4.0 CDN</a></li>
+                <li id="joopl-minified"><a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_self">jOOPL 2.4.1 CDN</a></li>
                 <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
             </ol>
 
