this._.derived turns into this.derived and...
- Some more useless code removed.
- this._ and this.derived are now defined in the base Object prototype.
This produces no breaking changes.
- Turning this._.derived into this.derived is a breaking change, but
it's better, isn't it? ;)

--- a/test/class.test.html
+++ b/test/class.test.html
@@ -268,7 +268,7 @@
                             },
                             members: {
                                 someMethod: function () {
-                                    return this._.derived.abstractMethod();
+                                    return this.derived.abstractMethod();
                                 },
 
                                 abstractMethod: function () {
