--- a/test/test.html
+++ b/test/test.html
@@ -11,9 +11,13 @@
 
     <link rel="stylesheet" type="text/css" href="qunit.css" />
     <script src="qunit.js" type="text/javascript"></script>
-    <script src="joopl.min.js" type="text/javascript"></script>
-    <script src="namespace.test.js"></script>
+    <script src="../joopl.js" type="text/javascript"></script>
+    <!--<script src="namespace.test.js"></script>-->
     <script src="class.test.js"></script>
     <script src="enum.test.js"></script>
+    <script>
+        $import.modules(["joopl.analyzer.SomeClass"], function() {
+        });
+    </script>
 </body>
 </html>
