--- a/test/test.html
+++ b/test/test.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="qunit.css" />
     <script src="qunit.js" type="text/javascript"></script>
-    <script src="../joopl.js" type="text/javascript"></script>
+    <script src="../src/joopl.js" type="text/javascript"></script>
     <!--<script src="namespace.test.js"></script>-->
     <script src="class.test.js"></script>
     <script src="enum.test.js"></script>
