Some links were broken and adding some content to the index page

--- a/index.html
+++ b/index.html
@@ -306,6 +306,23 @@
             <p>Write powerful and elegant JavaScript code on top of class-based, feature-rich object-oriented programming paradigm which works both on browsers
             and JavaScript runtimes like NodeJS!</p>
 
+            <p>
+                <a href="./assets/presentation.html" target="_blank">
+                    <strong>If you are new on jOOPL, there is a slide-show presentation made to get you into it! (press to start it!)</strong>
+                </a>
+            </p>
+
+            <h4>Discover the cutting-edge JavaScript code analyzer and the built-in asynchronous dependency loading!</h4>
+            Now jOOPL provides an out-of-the-box and revolutionary tool to analyze your code and automatically create a configuration file to load dependent JavaScript code files in the client-side.
+
+            Learn about jOOPL Analyzer and Asynchronous Dependency Loading by following these direct links:
+
+            <ul>
+                <li><a href="./classes/joopl-analyzer.html" target="_self">Introduction to jOOPL Analyzer</a></li>
+                <li><a href="./classes/grunt-joopl-analyzer.html" target="_self">Integrating jOOPL Analyzer and GruntJS task runner</a></li>
+                <li><a href="./classes/$import.html" target="_self">Asynchronous Dependency Loading</a></li>
+            </ul>
+ 
             <h3>Simple inheritance sample!</h3>
 
             <iframe width="100%" height="470" src="http://jsfiddle.net/mfidemraizer/XTE5z/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
@@ -318,8 +335,8 @@
             These are direct links to tests' source code:
 
             <ul>
-                <li><a href="../test/class.test.js" target="_blank">Class test</a></li>
-                <li><a href="../test/enum.test.js" target="_blank">Enumeration test</a></li>
+                <li><a href="test/class.test.js" target="_blank">Class test</a></li>
+                <li><a href="test/enum.test.js" target="_blank">Enumeration test</a></li>
             </ul>
 
             <h3>Ok, wait. Why jOOPL? Why object-oriented programming?</h3>
