--- a/assets/presentation.html
+++ b/assets/presentation.html
@@ -230,7 +230,7 @@ Welcome to **asynchronous dependency loading**.
 				<script type="text/template">
 ## jOOPL Presentation
 
-This is a sneak peack of what jOOPL can do in real-world projects.
+This is a sneak peek of what jOOPL can do in real-world projects.
 
 Learn more about jOOPL and get started on:
 
